webui: resized clientlist popup and disabled wordwrap to fix rendering issues with long client names

--- a/release/src/router/www/device-map/device-map.css
+++ b/release/src/router/www/device-map/device-map.css
@@ -764,9 +764,9 @@ body {
 	border-radius: 5px;
 	z-index: 200;
 	background-color:#444f53;
-	margin-left: 140px;
+	margin-left: 80px;
 	margin-top: -920px;
-	width:950px;
+	width:1150px;
 	height:auto;
 	box-shadow: 3px 3px 10px #000;
 	display:block;
